# rheo_storage

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dhara.Storage.slnx  LICENSE.txt  README.md  Rheo.Storage.slnx  dhara.config.toml  release.toml  rheo.config.toml  rheo_storage.sln
.artifacts/consumer-verify/: NuGet.Config
.artifacts/consumer-verify/ConsumerVerify/: ConsumerVerify.csproj  Program.cs
.codex/environments/: environment.toml
.github/workflows/: ci.yml  package-verify.yml  publish-nuget.yml  release-rust.yml  release.yml
bindings/dotnet/Dhara.Storage/: Dhara.Storage.csproj  DharaStorage.cs  README.md  SynchronousProgress.cs
bindings/dotnet/Dhara.Storage.ConsumerSmoke/: Dhara.Storage.ConsumerSmoke.csproj  Program.cs
bindings/dotnet/Dhara.Storage.Tests/: Dhara.Storage.Tests.csproj
bindings/dotnet/Dhara.Storage.Tests/Analyzing/: StorageAnalysisTests.cs
bindings/dotnet/Dhara.Storage.Tests/Logging/: StorageLoggingTests.cs
bindings/dotnet/Dhara.Storage.Tests/TestSupport/: CapturingLoggerFactory.cs  TemporaryDirectory.cs
bindings/dotnet/Rheo.Storage/: Models.cs  NativeMethods.cs  README.md  Rheo.Storage.csproj  RheoStorage.cs  SynchronousProgress.cs
bindings/dotnet/Rheo.Storage.ConsumerSmoke/: Program.cs  Rheo.Storage.ConsumerSmoke.csproj
bindings/dotnet/Rheo.Storage.TestHost/: Program.cs  Rheo.Storage.TestHost.csproj
bindings/dotnet/Rheo.Storage.Tests/: Rheo.Storage.Tests.csproj
dhara_dhbin/: Cargo.toml  README.md
dhara_dhbin/src/: lib.rs
dhara_storage/: Cargo.toml  README.md
dhara_storage/resources/: filedefs.dhbin
dhara_storage/src/: analysis.rs  definitions.rs  error.rs  lib.rs  watch.rs
dhara_storage/src/info/: directory.rs  file.rs  windows.rs
dhara_storage/src/operations/: directory.rs  file.rs
dhara_storage/src/storage/: mod.rs
dhara_storage/tests/: analysis.rs  operations.rs
dhara_storage_native/: Cargo.toml  README.md
dhara_storage_native/src/: abi.rs  errors.rs  lib.rs  logging.rs  marshal.rs  models.rs  operations.rs  queries.rs  sessions.rs  watching.rs
dhara_storage_native/tests/: ffi_exports.rs
docs/adr/: ADR-001-rust-first-rewrite.md  ADR-002-dotnet-ffi-wrapper.md
docs/ai/: commit-message.md  continuous-learning.md  index.md  project-guidelines.md
docs/ai/runbooks/: index.md
docs/reference/: com-consumer.md  commit-message.md  dotnet-consumer.md  legacy-rheo-storage.md  releasing-rheo-storage-dotnet.md  rust-consumer.md  winrt-consumer.md
rheo_repo_tool/: Cargo.toml  README.md
rheo_repo_tool/src/: lib.rs  main.rs
rheo_rpkg/: Cargo.toml  README.md
rheo_rpkg/src/: lib.rs
rheo_storage/: Cargo.toml  README.md
rheo_storage/resources/: filedefs.rpkg
rheo_storage/src/: analysis.rs  definitions.rs  error.rs  lib.rs  rpkg.rs  watch.rs
rheo_storage/src/info/: common.rs  directory.rs  file.rs  windows.rs
rheo_storage/src/operations/: common.rs  directory.rs  file.rs  mod.rs
rheo_storage/src/storage/: file.rs
rheo_storage/tests/: analysis.rs  operations.rs
rheo_storage_com/: Cargo.toml
rheo_storage_com/src/: lib.rs
rheo_storage_def_builder/: Cargo.toml  README.md  build.rs
rheo_storage_def_builder/assets/extensions/: level1.txt  level2.txt  level3.txt  level4.txt  level5.txt
rheo_storage_def_builder/package/: README.md
rheo_storage_def_builder/src/: builder.rs  lib.rs  logging.rs  main.rs  runner.rs  ui.rs
rheo_storage_def_builder/src/trid_xml/: mime.rs  mod.rs  model.rs  sluice.rs  source.rs
rheo_storage_def_builder/src/ui/: app.rs  input.rs  mod.rs  model.rs  render.rs  tests.rs
rheo_storage_def_builder/tests/: cli.rs  trid_xml.rs
rheo_storage_def_builder/tests/fixtures/trid_xml/defs/b/: bitmap-png.trid.xml
rheo_storage_def_builder/tests/fixtures/trid_xml/defs/z/: zzs-zyzzyva.trid.xml
rheo_storage_ffi/: Cargo.toml  README.md
rheo_storage_ffi/src/: abi.rs  errors.rs  lib.rs  logging.rs  marshal.rs  models.rs  operations.rs  queries.rs  sessions.rs  watching.rs
rheo_storage_ffi/tests/: ffi_exports.rs
rheo_storage_lib/: Cargo.toml
rheo_storage_lib/src/: analysis.rs  definitions.rs  error.rs  info.rs  lib.rs  watch.rs
rheo_storage_lib/src/info/: directory.rs  file.rs  mod.rs  windows.rs
rheo_storage_lib/src/operations/: directory.rs  tokio.rs
rheo_storage_lib/src/storage/: directory.rs  mod.rs
rheo_storage_lib/tests/: analysis.rs  operations.rs
rheo_storage_winrt/: Cargo.toml  README.md
rheo_storage_winrt/src/: lib.rs
rheo_tool/: Cargo.toml  README.md
rheo_tool/src/: defs.rs  lib.rs  main.rs  package.rs  process.rs  shell.rs  verify.rs
tooling/dhara_tool/: Cargo.toml  README.md
tooling/dhara_tool/src/: app.rs  command.rs  lib.rs  main.rs  package.rs  process.rs  shell.rs
tooling/dhara_tool/src/capabilities/: dhara_storage.rs  mod.rs
tooling/dhara_tool/src/tui/: exec.rs  mod.rs  render.rs  schema.rs  state.rs  terminal.rs
tooling/dhara_tool_dhara_storage/: Cargo.toml  README.md
tooling/dhara_tool_dhara_storage/assets/mime/: iana_media_types.txt
tooling/dhara_tool_dhara_storage/package/: README.md
tooling/dhara_tool_dhara_storage/src/: builder.rs  capability.rs  config.rs  defs.rs  interface.rs  lib.rs  output.rs  package_flow.rs  runner.rs  support.rs  verify.rs
tooling/dhara_tool_dhara_storage/src/trid_xml/: mod.rs  source.rs
tooling/rheo_tool/: Cargo.toml  README.md
tooling/rheo_tool/src/: app.rs  command.rs  main.rs  package.rs  process.rs  shell.rs
tooling/rheo_tool/src/capabilities/: mod.rs  rheo_storage.rs
tooling/rheo_tool_core/: Cargo.toml
tooling/rheo_tool_core/src/: lib.rs  process.rs  registry.rs
tooling/rheo_tool_rheo_storage/: Cargo.toml  README.md
tooling/rheo_tool_rheo_storage/assets/mime/: custom_media_types.txt
tooling/rheo_tool_rheo_storage/package/: README.md
tooling/rheo_tool_rheo_storage/src/: capability.rs  config.rs  defs.rs  lib.rs  logging.rs  package_flow.rs  runner.rs  support.rs  verify.rs
tooling/rheo_tool_rheo_storage/tests/fixtures/trid_xml/defs/a/: adobe_pdf.trid.xml
tooling/rheo_tool_ui/: Cargo.toml
tooling/rheo_tool_ui/src/: lib.rs
(+80 files in other folders)
