[workspace]
members = [
    "rheo_rpkg",
    "rheo_storage",
    "rheo_storage_ffi",
    "tooling/rheo_tool",
    "tooling/rheo_tool_core",
    "tooling/rheo_tool_rheo_storage",
    "tooling/rheo_tool_ui",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Naveen Dharmathunga <dasheenaveen@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/D-Naveenz/rheo_storage"
homepage = "https://github.com/D-Naveenz/rheo_storage"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1   # Allows compiler to perform better optimization.
lto = true          # Enables Link-time Optimization.
opt-level = "s"     # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true        # Ensures debug symbols are removed.
