[workspace]
members = [
    "dhara_dhbin",
    "dhara_storage",
    "dhara_storage_native",
    "tooling/dhara_tool",
    "tooling/dhara_tool_dhara_storage",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Naveen Dharmathunga <dasheenaveen@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/D-Naveenz/rheo_storage"
homepage = "https://github.com/D-Naveenz/rheo_storage"

[workspace.dependencies]
dhara_dhbin = { version = "0.4.0", path = "dhara_dhbin" }
dhara_storage = { version = "0.4.0", path = "dhara_storage" }
dhara_tool_dhara_storage = { version = "0.4.0", path = "tooling/dhara_tool_dhara_storage" }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1   # Allows compiler to perform better optimization.
lto = true          # Enables Link-time Optimization.
opt-level = "s"     # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true        # Ensures debug symbols are removed.
