[package]
name = "dhara_storage_native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Native C ABI wrapper for consuming Dhara Storage from .NET and other FFI clients."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/dhara_storage_native"
keywords = ["ffi", "storage", "filesystem", "windows", "abi"]
categories = ["filesystem", "external-ffi-bindings", "os::windows-apis"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dhara_storage.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[dev-dependencies]
tempfile = "3.27"
