[package]
name = "rheo_repo_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Repository configuration and release tooling for the Rheo Storage workspace."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/rheo_repo_tool"
keywords = ["tooling", "release", "nuget", "workspace", "config"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
toml_edit = "0.23"
xmltree = "0.11"

[dev-dependencies]
tempfile = "3.20"
