[package]
name = "rheo_rpkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Generic MessagePack-based RPKG v2 container for Rheo packages."
readme = "README.md"
documentation = "https://docs.rs/rheo_rpkg"
keywords = ["rpkg", "messagepack", "container", "lz4"]
categories = ["encoding", "filesystem"]

[dependencies]
lz4_flex = "0.13.0"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0"
