[package]
name = "rheo_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust-first file analysis, metadata, and storage operations for Windows-focused applications."
readme = "README.md"
documentation = "https://docs.rs/rheo_storage"
keywords = ["storage", "filesystem", "analysis", "mime", "windows"]
categories = ["filesystem", "os::windows-apis", "encoding"]

[lib]
crate-type = ["rlib"]

[features]
default = []
async-tokio = ["dep:tokio"]

[dependencies]
globset = "0.4"
notify = "8.2"
once_cell = "1.21"
rmp-serde = "1.3"
rheo_rpkg = { path = "../rheo_rpkg" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3.27"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
