[package]
name = "rheo_storage_def_builder"
version = "0.1.0"
edition = "2024"

[lib]
name = "rheo_storage_def_builder"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
indicatif = "0.18"
once_cell = "1.21"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rheo_storage = { path = "../rheo_storage" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
