[package]
name = "rheo_storage_def_builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interactive and scriptable builder for Rheo definitions packages from TrID XML sources."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/rheo_storage_def_builder"
keywords = ["trid", "definitions", "messagepack", "lz4", "cli"]
categories = ["command-line-utilities", "filesystem", "encoding"]
exclude = ["/package"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
chrono = "0.4"
color-eyre = "0.6.5"
crossterm = "0.29"
indicatif = "0.18"
once_cell = "1.21"
quick-xml = { version = "0.39.2", features = ["serialize"] }
ratatui = "0.30.0"
rheo_rpkg = { path = "../rheo_rpkg" }
rheo_storage = { path = "../rheo_storage" }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.27"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
