[package]
name = "rheo_storage_lib"
version = "0.1.0"
edition = "2024"

[lib]
# 'cdylib' is required for a standard Windows DLL
crate-type = ["cdylib"]

# Access Windows APIs and WinRT types
[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com"
]