[package]
name = "rheo_storage_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = []
async-tokio = ["dep:tokio"]

[dependencies]
once_cell = "1.21"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3.20"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
