[package]
name = "rheo_storage_winrt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Thin WinRT-facing wrapper crate over the Rheo Storage Rust core."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/rheo_storage_winrt"
keywords = ["windows", "winrt", "storage", "filesystem", "abi"]
categories = ["os::windows-apis", "filesystem"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rheo_storage = { path = "../rheo_storage" }
windows = { version = "0.62", features = ["Foundation"] }
