[package]
name = "rheo_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified operator CLI for Rheo definitions, verification, packaging, and release workflows."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/rheo_tool"
keywords = ["tooling", "release", "nuget", "verification", "defs"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
rheo_repo_tool = { path = "../rheo_repo_tool" }
rheo_storage_def_builder = { path = "../rheo_storage_def_builder" }
shlex = "1.3"
tempfile = "3.27"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27"
