[package]
name = "dhara_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified operator CLI for Dhara definitions, verification, packaging, and release workflows."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/tooling/dhara_tool"
keywords = ["tooling", "release", "nuget", "verification", "defs"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
dhara_tool_dhara_storage.workspace = true
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
shlex = "1.3"
tracing = "0.1"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27"
