[package]
name = "rheo_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified operator CLI for Rheo definitions, verification, packaging, and release workflows."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/tooling/rheo_tool"
keywords = ["tooling", "release", "nuget", "verification", "defs"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
rheo_tool_core = { path = "../rheo_tool_core" }
rheo_tool_rheo_storage = { path = "../rheo_tool_rheo_storage" }
rheo_tool_ui = { path = "../rheo_tool_ui" }
