[package]
name = "rheo_tool_rheo_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
autobins = false
description = "Repository-specific Rheo tool capability pack for rheo_storage."
readme = "README.md"
documentation = "https://github.com/D-Naveenz/rheo_storage/tree/main/tooling/rheo_tool_rheo_storage"
keywords = ["tooling", "defs", "nuget", "verification", "rheo"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/package"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
once_cell = "1.21"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rheo_rpkg = { path = "../../rheo_rpkg" }
rheo_storage = { path = "../../rheo_storage" }
rmp-serde = "1.3"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.27"
thiserror = "2.0"
toml = "1.1.2"
toml_edit = "0.25.11"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
xmltree = "0.12.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
