[package]
name = "rheo_tool_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interactive shell UI for the reusable Rheo tool platform."
readme = "../rheo_tool/README.md"

[dependencies]
anyhow = "1.0"
shlex = "1.3"
rheo_tool_core = { path = "../rheo_tool_core" }
